--- a/catalog.html
+++ b/catalog.html
@@ -27,14 +27,14 @@
             <a href="catalog.html" class="navigation-text__link">Гостиницы</a>
           </li>
         </ul>
-        <ul class="navigation_icons ">
+        <ul class="navigation_list navigation_icons ">
           <li class="navigation-icons__items navigation-icons__search">
             <a href="#" class="navigation-icons__link">
               <span class=" visually-hidden">Поиск</span>
             </a>
           </li>
           <li class="navigation-icons__items">
-            <a class="navigation-icons__items__heart" href="#">
+            <a class="navigation-icons__link navigation-icons__items__heart" href="#">
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
@@ -147,7 +147,7 @@
           </div>
           </ul>
           <ul class="hotels-list">
-            <li class="hotel-cards">
+            <li class="hotel-card">
               <img class="hotel-card-image" src="images/catalog/hotels-catalog/hotel-1.jpg" width="300" height="212"
                 alt="Отель с выходом из пещеры, на выходе которого видно звездное небо">
               <h3 class="hotel-card">Amara Resort & Spa</h3>
