Исправляет замечания гриди и фликсы

--- a/catalog.html
+++ b/catalog.html
@@ -126,7 +126,7 @@
       <section class="hotel">
         <div class="hotel-title">
           <h2 class="hotel-results">Найдено гостиниц: 38</h2>
-          <select name="filter-category">
+          <select name="filter" class="filter-category">
             <option value="cheap">Сначала дешевые</option>
             <option value="expensive">Сначала дорогие</option>
             <option value="hiht_rrating">Сначала с высоким рейтингом</option>
@@ -134,7 +134,7 @@
           </select>
           <ul class="icons">
             <li class="icons-list">
-              <button class="icons-button-table">
+              <button class="icons-list-table">
                 <span class="icons-items visually-hidden">Таблица</span>
               </button>
             </li>
@@ -152,70 +152,62 @@
         </ul>
         <ul class="hotel-list">
           <li class="hotel-card">
-            <img class="hotel-card-image" src="images/catalog/hotels-catalog/hotel-1.jpg" width="300" height="212"
-              alt="Отель с выходом из пещеры, на выходе которого видно звездное небо">
+            <a href="#" class="hotel-card-link">
+              <img class="hotel-card-image" src="images/catalog/hotels-catalog/hotel-1.jpg" width="300" height="212"
+                alt="Отель с выходом из пещеры, на выходе которого видно звездное небо">
+            </a>
             <h3 class="hotel-card">Amara Resort & Spa</h3>
-            <p class="hotel-card_value">
-              <span class="hotel-name">Гостиница</span>
-              <span class="value">От 4000 &#8381;</span>
-            </p>
-            <p class="hottel-card_button">
-              <a class="hotel-card-follow" href="#">Подробнее</a>
-              <button class="hotel-follow">В Избранное</button>
-            </p>
+            <span class="hotel-name">Гостиница</span>
+            <span class="value">От 4000 &#8381;</span>
+            <a class="hotel-card-follow" href="#">Подробнее</a>
+            <button class="hotel-follow">В Избранное</button>
             <div class="rating-area">
-              <span class="rating-stars visually-hidden">Четыре звезды</span>
+              <span class="rating-stars-four visually-hidden">Четыре звезды</span>
             </div>
             <p class="rating-number">Рейтинг: 8,5</p>
           </li>
           <li class="hotel-card">
-            <img class="hotel-card-image" src="images/catalog/hotels-catalog/hotel-2.jpg" width="300" height="212"
-              alt="Вид на скалу, изнутри которой исходит радуга">
+            <a href="#" class="hotel-card-link">
+              <img class="hotel-card-image" src="images/catalog/hotels-catalog/hotel-2.jpg" width="300" height="212"
+                alt="Вид на скалу, изнутри которой исходит радуга">
+            </a>
             <h3 class="hotel-card">Villas at Poco Diablo</h3>
-            <p class="hotel-card_value">
-              <span class="hotel-name">Гостиница</span>
-              <span class="value">От 5000 &#8381; </span>
-            </p>
-            <p class="hottel-card_button">
-              <a class="hotel-card-follow" href="#">Подробнее</a>
-              <button class="hotel-follow hotel-follow__active">В Избранное</button>
-            </p>
+            <span class="hotel-name">Гостиница</span>
+            <span class="value">От 5000 &#8381; </span>
+            <a class="hotel-card-follow" href="#">Подробнее</a>
+            <button class="hotel-follow hotel-follow__active">В Избранном</button>
             <div class="rating-area">
-              <span class="rating-stars visually-hidden">Четыре звезды</span>
+              <span class="rating-stars-four visually-hidden">Четыре звезды</span>
             </div>
             <p class="rating-number">Рейтинг: 9,2</p>
           </li>
           <li class="hotel-card">
-            <img class="hotel-card-image" src="images/catalog/hotels-catalog/hotel-3.jpg" width="300" height="212"
-              alt="Вид на разноуровневую скалу">
+            <a href="#" class="hotel-card-link">
+              <img class="hotel-card-image" src="images/catalog/hotels-catalog/hotel-3.jpg" width="300" height="212"
+                alt="Вид на разноуровневую скалу">
+            </a>
             <h3 class="hotel-card">Desert Quail Inn</h3>
-            <p class="hotel-card_value">
-              <span class="hotel-name">Гостиница</span>
-              <span class="value">От 2500 &#8381;</span>
-            </p>
-            <p class="hottel-card_button">
-              <a class="hotel-card-follow" href="#">Подробнее</a>
-              <button class="hotel-follow">В Избранное</button>
-            </p>
+            <span class="hotel-name">Гостиница</span>
+            <span class="value">От 2500 &#8381;</span>
+            <a class="hotel-card-follow" href="#">Подробнее</a>
+            <button class="hotel-follow">В Избранное</button>
             <div class="rating-area">
-              <span class="rating-stars visually-hidden">Три звезды</span>
+              <span class="rating-stars-three visually-hidden">Три звезды</span>
             </div>
             <p class="rating-number">Рейтинг: 6,9</p>
           </li>
           <li class="hotel-card">
-            <img class="hotel-card-image" src="images/catalog/hotels-catalog/hotel-4.jpg" width="300" height="212"
-              alt="Вид на скалу на фоне звездного неба">
+            <a href="#" class="hotel-card-link">
+              <img class="hotel-card-image" src="images/catalog/hotels-catalog/hotel-4.jpg" width="300" height="212"
+                alt="Вид на скалу на фоне звездного неба">
+            </a>
             <h3 class="hotel-card">HreenTree Inn</h3>
-            <p class="hotel-card_value">
-              <span class="hotel-name">Гостиница</span>
-              <span class="value">От 1500 &#8381;</span>
-            </p>
-            <p class="hottel-card_button">
-              <a class="hotel-card-follow" href="#">Подробнее</a>
-              <button class="hotel-follow">В Избранное</button>
-            </p>
+            <span class="hotel-name">Гостиница</span>
+            <span class="value">От 1500 &#8381;</span>
+            <a class="hotel-card-follow" href="#">Подробнее</a>
+            <button class="hotel-follow">В Избранное</button>
             <div class="rating-area">
-              <span class="rating-stars visually-hidden">Две звезды</span>
+              <span class="rating-stars-two visually-hidden">Две звезды</span>
             </div>
             <p class="rating-number">Рейтинг: 5,0</p>
           </li>
