--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
             <a href="catalog.html" class="navigation-text__link">Гостиницы</a>
           </li>
         </ul>
-        <ul class="navigation_list navigation_icons ">
-          <li class="navigation-icons__items navigation-icons__search">
+        <ul class="navigation_list navigation_icons">
+          <li class="navigation-icons__items">
             <a href="#" class="navigation-icons__link">
               <span class=" visually-hidden">Поиск</span>
             </a>
           </li>
           <li class="navigation-icons__items">
-            <a class="navigation-icons__link navigation-icons__items__heart" href="#">
+            <a class="navigation-icons__link" href="#">
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
